# Eddy_Current_cylindrical_coordinates_zTransform

./: CMakeLists.txt  LICENSE  README.md
data/: convert_vtk_v2_to_v3.py  maillage.geo  maillage.msh  maillage.vtk  maillage_v3.vtk
doc/: readme.md
include/: defs.hpp  defs_dealii.hpp  ec_transient.hpp  ec_ztransform.hpp  helmholtz_solver.hpp  physical_parameters.hpp  source_parameters.hpp
scripts/: compare_zt_transient.py  plot_observable.py  plot_quadrature_nodes.py  plot_validation_zTransform.py
src/: ec_transient.cpp  ec_ztransform.cpp  helmholtz_solver.cpp  main.cpp  physical_parameters.cpp  source_parameters.cpp
